MIR-1551 Update to Java 25 and modernize code